--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 node_modules/
-public/input/*
-public/output/*
-!public/input/.gitkeep
-!public/output/.gitkeep
+src/public/output/*
+!src/public/output/.gitkeep
 .DS_Store
