--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "description": "Image converter tool for WebP format",
     "dependencies": {
         "express": "^4.21.2",
+        "multer": "^1.4.5-lts.1",
         "sharp": "^0.33.5"
     }
 }
